<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>volandouy.oficial</groupId>
  <artifactId>volandouy-oficial</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging> <!-- 💡 clave -->

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <jakarta.persistence.version>3.1.0</jakarta.persistence.version>
    <hibernate.orm.version>6.4.4.Final</hibernate.orm.version>
    <postgres.jdbc.version>42.7.2</postgres.jdbc.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.jupiter.version>5.11.3</junit.jupiter.version>
  	<maven.surefire.version>3.5.1</maven.surefire.version>
  	<maven.compiler.release>17</maven.compiler.release>
  </properties>

  <dependencies>
    <!-- API de JPA (DEJAR SIN scope; debe ir dentro del WAR) -->
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
      <version>${jakarta.persistence.version}</version>
    </dependency>

    <!-- Hibernate -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.orm.version}</version>
    </dependency>

    <!-- Driver PostgreSQL -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgres.jdbc.version}</version>
    </dependency>

    <!-- Logs simples -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.13</version>
      <scope>runtime</scope>
    </dependency>

    
    
    <!-- Calendario Swing (JDateChooser) -->
	<dependency>
	  <groupId>com.toedter</groupId>
	  <artifactId>jcalendar</artifactId>
	  <version>1.4</version>
	</dependency>
	
	<!-- MigLayout (usás estas libs por los jars que mostraste) -->
	<dependency>
	  <groupId>com.miglayout</groupId>
	  <artifactId>miglayout-core</artifactId>
	  <version>11.4.2</version>
	</dependency>
	<dependency>
	  <groupId>com.miglayout</groupId>
	  <artifactId>miglayout-swing</artifactId>
	  <version>11.4.2</version>
	</dependency>
	
	<!-- JGoodies -->
	<dependency>
	  <groupId>com.jgoodies</groupId>
	  <artifactId>jgoodies-forms</artifactId>
	  <version>1.9.0</version>
	</dependency>
	<dependency>
	  <groupId>com.jgoodies</groupId>
	  <artifactId>jgoodies-common</artifactId>
	  <version>1.8.1</version>
	</dependency>
	
	<!-- Gson-->
	<dependency>
	  <groupId>com.google.code.gson</groupId>
	  <artifactId>gson</artifactId>
	  <version>2.13.2</version>
	</dependency>
  <!-- H2 BD en memoria-->
	<dependency>
	  <groupId>com.h2database</groupId>
	  <artifactId>h2</artifactId>
	  <version>2.2.224</version>
	  <scope>test</scope>
	</dependency>
	<dependency>
    	<groupId>org.junit.jupiter</groupId>
    	<artifactId>junit-jupiter</artifactId>
    	<version>${junit.jupiter.version}</version>
    	<scope>test</scope>
	</dependency>
 </dependencies>

  

  <build>
  <plugins>
    <plugin>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.13.0</version>
      <configuration>
        <release>17</release>
      </configuration>
    </plugin>

    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-surefire-plugin</artifactId>
      <version>${maven.surefire.version}</version>
      <configuration>
        <useModulePath>false</useModulePath>
      </configuration>
    </plugin>

  
  <!--<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-pmd-plugin</artifactId>
	  <version>3.18.0</version>
	  <configuration>
	    <rulesets>
	      <ruleset>src/main/resources/pmd/ruleset.xml</ruleset>
	    </rulesets>
	    <failOnViolation>false</failOnViolation>
	  </configuration>
	  <executions>
	    <execution>
	      <id>pmd-check</id>
	      <phase>verify</phase>
	      <goals>
	        <goal>pmd</goal>
	        <goal>check</goal>
	      </goals>
	    </execution>
	  </executions>
	</plugin>-->
	
  </plugins>
</build>
</project>
